Fixed scorecard sizes

--- a/ihp/scorecards/templates/scorecards/dp.html
+++ b/ihp/scorecards/templates/scorecards/dp.html
@@ -6,13 +6,15 @@
     <script type='text/javascript' src='{{ MEDIA_URL }}js/d3.v2.min.js'></script>
     <script type='text/javascript' src='{{ MEDIA_URL }}js/horizontalbargraph.js'></script>
     <style>
-        svg, #figure { width:1495px ; height:2126px;}
+        /*svg, #figure { width:1495px ; height:2126px;}*/
+        svg, #figure { width:1505px; height:2125px;}
+
         .additional-information {
-            font-size:7px;
+            font-size:6px;
         }
 
         .summary {
-            font-size:9px;
+            font-size:8px;
         }
 
         .hb-rect-text, .hb-line{
@@ -35,7 +37,7 @@
         }
 
         .agency-profile {
-            font-size: 8px;
+            font-size: 7px;
         }
 
         .hb-rect-text-value {
