--- a/ihp/templates/base.html
+++ b/ihp/templates/base.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.8.2r1/build/reset-fonts-grids/reset-fonts-grids.css">
+<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/reset-fonts-grids.css">
 {% block head %}{% endblock head %}
 </head>
 <body>
