Lots of small scorecards related bug fixes

--- a/ihp/scorecards/templates/scorecards/gov.html
+++ b/ihp/scorecards/templates/scorecards/gov.html
@@ -23,7 +23,7 @@
         .header-text, .health-value {
             color:#0E3D3D;
             font-size:11px;
-            font-family:"Calibri-Bold";
+            font-family:"Calibri";
         }
 
         .commitment-text {
