Added previous year data as JSON file. Added font to scorecards.

--- a/ihp/scorecards/templates/scorecards/dp.html
+++ b/ihp/scorecards/templates/scorecards/dp.html
@@ -6,6 +6,10 @@
     <script type='text/javascript' src='{{ MEDIA_URL }}js/d3.v2.min.js'></script>
     <script type='text/javascript' src='{{ MEDIA_URL }}js/horizontalbargraph.js'></script>
     <style>
+        @font-face {
+	    font-family: 'Calibri';
+	    src: url({{ MEDIA_URL }}fonts/calibri.ttf);
+	}
         /*svg, #figure { width:1495px ; height:2126px;}*/
         svg, #figure { width:1505px; height:2125px;}
 
