--- a/ihp/scorecards/templates/scorecards/gov.html
+++ b/ihp/scorecards/templates/scorecards/gov.html
@@ -11,6 +11,10 @@
     </script>
     <script type='text/javascript' src='{{ MEDIA_URL }}js/svg-lib.js'></script>
     <style>
+        @font-face {
+	    font-family: 'Calibri';
+	    src: url({{ MEDIA_URL }}fonts/calibri.ttf);
+	}
         svg, #figure { width:1800px; height:1325px;}
         body{
             background-color:#fefefe;
