Added I18N translations to country scorecard page 1 SVG template.

--- a/ihp/scorecards/templates/scorecards/dp.html
+++ b/ihp/scorecards/templates/scorecards/dp.html
@@ -59,7 +59,7 @@
 <body style="">
     <div id="figure"></div>
     <script type="text/javascript">
-    var pages = ['{{ MEDIA_URL }}svg/ihp-page-1.svg', '{{ MEDIA_URL }}svg/ihp-page-2.svg'];
+    var pages = ['ihp-page-1.svg', 'ihp-page-2.svg'];
     var json = '{% url dp_scorecard_json agency_id language %}'
 
     load_front = function(json){
