Added volume tables

--- a/ihp/submissions/templates/home.html
+++ b/ihp/submissions/templates/home.html
@@ -98,6 +98,9 @@
                                 <li><a href="{% url agency_ratings2 "English" %}">Aggregated Ratings with data</a></li>
                                 <li><a href="{% url agency_alternative_baselines %}">Alternative Baselines</a></li>
                                 <li><a href="{% url agency_response_breakdown %}">Response Breakdown</a></li>
+                                <li><a href="{% url agency_volume_of_aid "2DPa" %}">Volume of aid (2DPa)</a></li>
+                                <li><a href="{% url agency_volume_of_aid "4DP" %}">Volume of aid (4DP)</a></li>
+                                <li><a href="#">New 2x2 table</a></li>
                             </ul>
                         </p>
                     </div>
