Initial top5 view complete

--- a/ihp/submissions/templates/home.html
+++ b/ihp/submissions/templates/home.html
@@ -126,6 +126,7 @@
                                 <li><a href="{% url country_matrix "English" %}">Country Table without Figures</a></li>
                                 <li><a href="{% url government_graphs "English" %}">Government Graphs (<a href="{% url government_graphs "French" %}">French</a>)</li>
                                 <li><a href="{% url country_response_breakdown %}">Response Breakdown</a></li>
+                                <li><a href="{% url top5_countries %}">Top5 Countries</a></li>
                             </ul>
                         </p>
                     </div>
