--- a/ihp/submissions/templates/submissions/top5_countries.html
+++ b/ihp/submissions/templates/submissions/top5_countries.html
@@ -1,7 +1,14 @@
 {% block head %}
     {{ block.super }}
     <style>
-        #summary table td, #detail table td {
+        #top5_countries {
+            margin: 50px;
+        }
+        table {
+            margin-bottom: 10px;
+        }
+
+        table td {
             padding: 8px;
         }
 
@@ -21,35 +28,88 @@
 
 {% block content %}
 <div id="top5_countries">
-    <div class="row" id="heading"><p class="span12">Top3</p></div>
-    <div class="row row" id="tables">
-        <div id="summary" class="span4">
-            <div class="top3">
-            </div>
-            <div class="next2">
-            </div>
-            <div class="the_rest">
-            </div>
-        </div>
-        <div id="detail" class="span8">
-            <div class="top3">
-            </div>
-            <div class="next2">
-            </div>
-            <div class="the_rest">
-            </div>
-        </div>
+    <div class="row" id="top3">
+        <h1>Top 3</h1>
+    </div>
+    <div class="row" id="next2">
+        <h1>Next 2</h1>
+    </div>
+    <div class="row" id="the_rest">
+        <h1>The Rest</h1>
     </div>
 </div>
 <script>
 
+    fmt_val = function(v) {
+        if (v == "__NA__")
+            return "N/A"
+        return d3.round(v, 2);
+    }
+
     build_table = function(js, group) {
-        var table = d3.select("#summary ." + group)
-            .append("table")
-        table.append("tr")
+        var table = d3.select("#" + group)
+            .append("table");
+
+        var header_row = table.append("tr");
+        header_row
             .append("th")
             .attr("colspan", "4")
-            .text("Total")
+            .text("Summary")
+
+        header_row
+            .selectAll("th.country")
+            .data(js[group][0].by_country)
+            .enter()
+            .append("th")
+                .attr("colspan", 3)
+                .text(function(d) { return d.name; });
+
+        var header_row2 = table.append("tr");
+        header_row2
+            .selectAll("th")
+            .data(["", "2007", "2009", "2011"])
+            .enter()
+            .append("th")
+            .text(function(d) { return d; })
+
+        for (c in js[group][0].by_country) {
+            header_row2
+                .selectAll("th.country")
+                .data(["2007", "2009", "2011"])
+                .enter()
+                .append("th")
+                    .text(function(d) { return d; });
+        }
+
+        var data_rows = table.selectAll("tr.datarow")
+            .data(js[group])
+            .enter()
+            .append("tr");
+
+        data_rows
+            .append("th")
+            .text(function(d) { return d.indicator; });
+
+        data_rows
+            .each(function(d, i) {
+                d3.select(this)
+                    .selectAll("td.summary")
+                    .data(["2007", "2009", "2011"])
+                    .enter()
+                    .append("td")
+                        .text(function(d2, i2) {
+                           return fmt_val(d.averages[d2]); 
+                        });
+
+                for (c in d["by_country"]) {
+                    console.log(c);
+                    d3.select(this).append("td").text(fmt_val(d["by_country"][c]["2007"]));
+                    d3.select(this).append("td").text(fmt_val(d["by_country"][c]["2009"]));
+                    d3.select(this).append("td").text(fmt_val(d["by_country"][c]["2011"]));
+                }
+            });
+            
+        /*
         var header = table.append("tr")
         header.append("th")
         header.append("th").text("2007")
@@ -65,9 +125,10 @@
                 d3.select(this).append("th")
                     .text(v.indicator)    
                 d3.select(this).selectAll("td")
-                    .data(["2007", "2007", "2011"])
+                    .data(["2007", "2009", "2011"])
                     .enter()
                     .append("td").text(function(v2) { 
+                        console.log(v + ": " + v2);
                         return d3.round(v.averages[v2], 2); 
                     });
                 
@@ -100,15 +161,16 @@
                 d3.select(this).append("th").text(function(v, i) { return v.indicator })
                 for (val in v.by_country) {
                     d3.select(this).append("td").attr("class", "data").text(d3.round(v.by_country[val]["2007"], 2));
-                    d3.select(this).append("td").attr("class", "data").text(d3.round(v.by_country[val]["2007"], 2));
+                    d3.select(this).append("td").attr("class", "data").text(d3.round(v.by_country[val]["2009"], 2));
                     d3.select(this).append("td").attr("class", "data").text(d3.round(v.by_country[val]["2011"], 2));
                 }
             }) 
+        */
     }
 
 
-    //var json = '{% url json_top5_countries %}';
-    var json = '/media/test.json';
+    var json = '{% url json_top5_countries %}';
+    //var json = '/media/test.json';
     d3.json(json, function(e){
         build_table(e, "top3");
         build_table(e, "next2");
