--- a/ihp/submissions/templates/submissions/main_base_bootstrap.html
+++ b/ihp/submissions/templates/submissions/main_base_bootstrap.html
@@ -8,5 +8,6 @@
     <script type='text/javascript' src='{{ MEDIA_URL }}js/d3.v2.min.js'></script>
     <script type='text/javascript' src='{{ MEDIA_URL }}js/bootstrap.js'></script>
     <script type='text/javascript' src='{{ MEDIA_URL }}js/bootstrap-popover.js'></script>
+    <script type='text/javascript' src='{{ MEDIA_URL }}js/loader.js'></script>
 {% endblock %}
 
