Added loader to 2x2

--- a/ihp/submissions/templates/submissions/main_base_bootstrap.html
+++ b/ihp/submissions/templates/submissions/main_base_bootstrap.html
@@ -9,5 +9,16 @@
     <script type='text/javascript' src='{{ MEDIA_URL }}js/bootstrap.js'></script>
     <script type='text/javascript' src='{{ MEDIA_URL }}js/bootstrap-popover.js'></script>
     <script type='text/javascript' src='{{ MEDIA_URL }}js/loader.js'></script>
+
+    <style>
+        .loader path {
+            stroke: white;
+            fill: steelblue;
+            padding: 3px;
+            margin: 2px;
+            color: white;
+        }
+    </style>
+
 {% endblock %}
 
