--- a/ihp/submissions/templates/submissions/two_by_two_analysis.html
+++ b/ihp/submissions/templates/submissions/two_by_two_analysis.html
@@ -47,6 +47,7 @@
 {% endblock %}
 
 {% block content %}
+<div id="DataDisplay"></div>
 <div id="twobytwo">
     <div class="row" id="heading"><p class="span12"><h1>Two-by-two analysis</h1></p></div>
     <div class="row" id="tables"></div>
@@ -64,6 +65,7 @@
     }
 
     var build_table = function(json) {
+        loadStop();
         var container = d3.select("#twobytwo");
 
         var tablerow = container.select("#tables")
@@ -171,5 +173,6 @@
     d3.json(json, function(e){
         build_table(e);
     });
+    loadStart();
 </script>
 {% endblock %}
