Added value graph to indicator 2DPa for agencies and countries.

--- a/ihp/submissions/templates/submissions/agencygraphs.html
+++ b/ihp/submissions/templates/submissions/agencygraphs.html
@@ -5,6 +5,7 @@
 <script>
 
 {{ graph_2DPa|safe }}
+{{ graph_2DPa_2|safe }}
 {{ graph_2DPb|safe }}
 {{ graph_2DPc|safe }}
 {{ graph_3DP|safe }}
@@ -19,6 +20,7 @@
 <h1>{{ agency }}</h1>
 
 <div class="graphblock"><div id="graph_2DPa" class="graph"></div></div>
+<div class="graphblock"><div id="graph_2DPa_2" class="graph"></div></div>
 <div class="graphblock"><div id="graph_2DPb" class="graph"></div></div>
 <div class="graphblock"><div id="graph_2DPc" class="graph"></div></div>
 <div class="graphblock"><div id="graph_3DP" class="graph"></div></div>
