--- a/ihp/submissions/templates/home.html
+++ b/ihp/submissions/templates/home.html
@@ -103,6 +103,7 @@
                                     <a href="{% url agency_volume_of_aid "4DP" %}">4DP</a>)
                                 </li>
                                 <li><a href="{% url two_by_two_analysis %}">2x2 Analysis Tables</a></li>
+                                <li><a href="{% url fragile_states %}">Fragile States Tables</a></li>
                             </ul>
                         </p>
                     </div>
