--- a/ihp/submissions/templates/home.html
+++ b/ihp/submissions/templates/home.html
@@ -104,6 +104,7 @@
                                 </li>
                                 <li><a href="{% url two_by_two_analysis %}">2x2 Analysis Tables</a></li>
                                 <li><a href="{% url fragile_states %}">Fragile States Tables</a></li>
+                                <li><a href="{% url volumes_by_country %}">Volume of Aid</a></li>
                             </ul>
                         </p>
                     </div>
